[tool.poetry]
name = "volttron-lib-zmq"
version = "0.1.0"
description = "VOLTTRON zmq message bus implementation"
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-lib-zmq"
homepage = "https://github.com/eclipse-volttron/volttron-lib-zmq"
keywords = []
packages = [ { include = "volttron", from = "src" } ]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License"
]
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
volttron = { path="../volttron-core-next", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mock = "^5.0.2"
pre-commit = "^3.2.2"
yapf = "^0.33.0"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
